--- a/env.example
+++ b/env.example
@@ -1,10 +1,8 @@
-MONGO_USER=
-MONGO_PASSWORD=
-DB_NAME=
-DB_URI=
-MONGO_USER_TEST=
-MONGO_PASSWORD_TEST=
-DB_NAME_TEST=
-DB_URI_TEST=
+DB_USER=
+DB_PASSWORD=
+DB_HOST=
+DB_PORT=
+DB_DATABASE=
+DB_SCHEMA=
 PORT=
 SECRET=
